# rescue-sccs-sim

./: .gitignore  README.md  SCCS_实验总结报告.docx  docker-compose.yml  env.py  pathfinding.py  requirements.txt  robot.py  run_experiments.py  tcfm.py  test_perception.py
algorithms/: baselines.py  sccs.py
output/data/: ablation_results.csv  extreme_results.csv  scale_results.csv  sota_results.csv
perception/: aie.py  ekf_tracker.py  fusion_pipeline.py  lidar_validator.py
ros2_ws/src/rescue_sccs/: package.xml  setup.py
ros2_ws/src/rescue_sccs/launch/: rescue.launch.py
ros2_ws/src/rescue_sccs/rescue_sccs/: env_node.py  robot_node.py  sccs_node.py
