<?xml version="1.0"?>
<package format="3">
  <name>rescue_sccs</name>
  <version>0.0.1</version>
  <description>SCCS rescue robot multi-agent simulation</description>
  <maintainer email="you@example.com">Author</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>foxglove_bridge</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
